[package]
name = "libcfd"
version = "0.1.0"
edition = "2021"

[build_dependencies]
capnpc = "0.19"

[dependencies]
anyhow = "1.0"
async-tungstenite = "0.25"
base64 = "0.21"
capnp = "0.19"
capnp-futures = "0.19"
capnp-rpc = "0.19"
rustls = "0.21"
sha1 = "0.10"
uuid = "1.7"
futures = "0.3"
serde_json = "1.0"

[dependencies.quinn]
version = "0.10"
features = ["futures-io"]

[dependencies.reqwest]
version = "0.11"
features = ["json"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.36"
features = ["rt", "net"]
