[workspace]
members = ["rpc"]

[package]
name = "libcfd"
version = "0.2.0"
edition = "2021"

[dependencies.hyper]
version = "1.2"
features = ["http1", "http2", "client", "server"]

[dependencies.hyper-util]
version = "0.1"
features = ["tokio"]

[dependencies.quinn]
version = "0.10"
features = ["futures-io"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.rpc]
package = "libcfd-rpc"
path = "rpc"

[dependencies.tokio]
version = "1.36"
features = ["net", "macros"]

[dependencies.tokio-tungstenite]
version = "0.21"
optional = true

[dependencies.uuid]
version = "1.7"
features = ["v4", "serde"]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
bytes = "1.5"
http-body = "1.0"
http-body-util = "0.1"
serde_json = "1.0"
futures = "0.3"
rustls = "0.21"        # Version blocked by quinn's rustls version
tokio-rustls = "0.24"  # Version blocked by quinn's rustls version
webpki-roots = "0.25"  # Version blocked by quinn's rustls version
